--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -1,3 +1,4 @@
 # bar library
 SET(BAR_src ${SRCBAR}/functions.f90)
+#SET(BAR_src ${SRCBAR}/amcalc_molecule.f90)
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
