--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -1,4 +1,5 @@
 # bar library
-SET(BAR_src ${SRCBAR}/functions.f90)
-#SET(BAR_src ${SRCBAR}/oprad_molecule.f90)
+SET(BAR_src ${SRCBAR}/oprad_functions.f90
+             ${SRCBAR}/oprad_molecule.f90
+)
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
