Add the oprad atomic

--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -1,5 +1,6 @@
 # bar library
 SET(BAR_src ${SRCBAR}/oprad_functions.f90
              ${SRCBAR}/oprad_molecule.f90
+             ${SRCBAR}/oprad_atomic.f90
 )
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
