Cambio de estructura - OpenRadiac ahora es subr.

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 # Add the source files
 SET(FOO_src ${SRCFOO}/oprad.f90
-            ${SRCFOO}/constants.f90
+            ${SRCFOO}/main.f90
 )
 
 # Define the executable in terms of the source files
