--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -2,5 +2,6 @@
 SET(BAR_src ${SRCBAR}/oprad_functions.f90
              ${SRCBAR}/oprad_molecule.f90
              ${SRCBAR}/oprad_atomic.f90
+             ${SRCBAR}/constants.f90
 )
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
