Relativistic Stopping Power

--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -4,5 +4,6 @@ SET(BAR_src ${SRCBAR}/functions.f90
              ${SRCBAR}/oprad_atomic.f90
              ${SRCBAR}/constants.f90
              ${SRCBAR}/readinput.f90
+             ${SRCBAR}/convert_unit.f90
 )
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
