--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ CMakeCache.txt
 /CMakeFiles
 Makefile
 cmake_install.cmake
+CMakeFiles/CMakeOutput.log
+CMakeFiles/Makefile2
+CMakeFiles/progress.marks
+
